--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-	"name": "node-polyfill-webpack-plugin",
-	"version": "2.0.1",
-	"description": "Polyfill Node.js core modules in Webpack.",
-	"repository": "Richienb/node-polyfill-webpack-plugin",
+	"name": "gopeed-polyfill-webpack-plugin",
+	"version": "1.0.0",
+	"description": "Polyfill gopeed core modules in Webpack.",
+	"repository": "GopeedLab/gopeed-polyfill-webpack-plugin",
 	"author": {
 		"name": "Richie Bendall",
 		"email": "richiebendall@gmail.com"
@@ -40,9 +40,11 @@
 		"process": "^0.11.10",
 		"punycode": "^2.3.0",
 		"querystring-es3": "^0.2.1",
-		"readable-stream": "^4.4.2",
+		"readable-stream": "^3.6.0",
+		"builtin-status-codes": "^3.0.0",
+    "inherits": "^2.0.4",
+    "xtend": "^4.0.2",
 		"stream-browserify": "^3.0.0",
-		"stream-http": "^3.2.0",
 		"string_decoder": "^1.3.0",
 		"timers-browserify": "^2.0.12",
 		"tty-browserify": "^0.0.1",
