--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
 	"description": "Polyfill gopeed core modules in Webpack.",
 	"repository": "GopeedLab/gopeed-polyfill-webpack-plugin",
 	"author": {
-		"name": "Richie Bendall",
-		"email": "richiebendall@gmail.com"
+		"name": "monkeyWie",
+		"email": "liwei-8466@qq.com"
 	},
 	"license": "MIT",
 	"main": "index.js",
