--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
 		"querystring-es3": "^0.2.1",
 		"readable-stream": "^3.6.0",
 		"builtin-status-codes": "^3.0.0",
-    "inherits": "^2.0.4",
-    "xtend": "^4.0.2",
+		"inherits": "^2.0.4",
+		"xtend": "^4.0.2",
 		"stream-browserify": "^3.0.0",
 		"string_decoder": "^1.3.0",
 		"timers-browserify": "^2.0.12",
@@ -65,6 +65,9 @@
 	"xo": {
 		"rules": {
 			"unicorn/prefer-module": "off"
-		}
+		},
+		"ignores": [
+			"modules/**"
+		]
 	}
 }
