--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
 	"name": "gopeed-polyfill-webpack-plugin",
-	"version": "1.0.2",
+	"version": "1.0.3",
 	"description": "Polyfill Node.js core modules in Webpack.",
 	"repository": "GopeedLab/gopeed-polyfill-webpack-plugin",
 	"author": {
-		"name": "monkeyWie",
-		"email": "liwei-8466@qq.com"
+		"name": "Levi",
+		"email": "liwei2633@gmail.com"
 	},
 	"license": "MIT",
 	"main": "index.js",
@@ -30,29 +30,29 @@
 		"assert": "^2.1.0",
 		"browserify-zlib": "^0.2.0",
 		"buffer": "^6.0.3",
+		"builtin-status-codes": "^3.0.0",
 		"console-browserify": "^1.2.0",
 		"constants-browserify": "^1.0.0",
 		"crypto-browserify": "^3.12.0",
 		"domain-browser": "^4.22.0",
 		"events": "^3.3.0",
 		"https-browserify": "^1.0.0",
+		"inherits": "^2.0.4",
 		"os-browserify": "^0.3.0",
 		"path-browserify": "^1.0.1",
 		"process": "^0.11.10",
 		"punycode": "^2.3.0",
 		"querystring-es3": "^0.2.1",
 		"readable-stream": "^3.6.0",
-		"builtin-status-codes": "^3.0.0",
-		"inherits": "^2.0.4",
-		"xtend": "^4.0.2",
 		"stream-browserify": "^3.0.0",
 		"string_decoder": "^1.3.0",
+		"text-encoding-utf-8": "^1.0.2",
 		"timers-browserify": "^2.0.12",
 		"tty-browserify": "^0.0.1",
 		"type-fest": "^4.4.0",
 		"url": "^0.11.3",
 		"util": "^0.12.5",
-		"vm-browserify": "^1.1.2"
+		"xtend": "^4.0.2"
 	},
 	"devDependencies": {
 		"ava": "^5.3.1",
