--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "gopeed-polyfill-webpack-plugin",
-	"version": "1.0.3",
+	"version": "1.0.4",
 	"description": "Polyfill Node.js core modules in Webpack.",
 	"repository": "GopeedLab/gopeed-polyfill-webpack-plugin",
 	"author": {
@@ -28,6 +28,7 @@
 	],
 	"dependencies": {
 		"assert": "^2.1.0",
+		"base-64": "^1.0.0",
 		"browserify-zlib": "^0.2.0",
 		"buffer": "^6.0.3",
 		"builtin-status-codes": "^3.0.0",
@@ -35,6 +36,7 @@
 		"constants-browserify": "^1.0.0",
 		"crypto-browserify": "^3.12.0",
 		"domain-browser": "^4.22.0",
+		"event-target-shim": "^6.0.2",
 		"events": "^3.3.0",
 		"https-browserify": "^1.0.0",
 		"inherits": "^2.0.4",
